fix mobile banner desktop alignment

--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -128,6 +128,11 @@ nav span {
    display: none;
   }
 
+  .banner {
+  max-width: 100%;
+  padding: none;
+}
+
 .small {
   display: flex;
   flex-direction: column;
@@ -139,8 +144,17 @@ nav span {
   max-width: 85%;
 }
 
-.text-main h1 {
-  padding: 1rem
+.text-main h1,
+  span {
+  padding: 1rem;
+  line-height: 2.5rem;
+}
+
+.button {
+  width: 70%;
+  align-items: center;
+  margin-top: 1rem;
+  justify-content: center;
 }
 }
 
@@ -155,6 +169,7 @@ nav span {
 .small img {
   max-width: 100%;
 }
+
 .event {
   border: 1px solid black;
 }
@@ -164,10 +179,15 @@ nav span {
     border: none;
   }
 
-  .small img {
+  .padding {
     padding: 1rem;
   }
+
+  .small .text {
+    padding-left: 2rem;
+  }
 }
+
 /*courses*/
 .top {
   text-align: center;
@@ -198,7 +218,9 @@ nav span {
 @media only screen and (max-width: 560px) {
   .top {
     padding: 2rem 0 1rem 0;
+    border-top: 1px solid lightgray;
   }
+
   .courses {
     display: none;
   }
@@ -206,6 +228,7 @@ nav span {
   .bites {
     margin: 1rem 0 2rem 0;
   }
+
    .bite {
     display: block;
     padding: 1rem 1rem 1.5rem 1rem;
@@ -213,8 +236,8 @@ nav span {
     text-align: left;
     margin: 0.5rem;
   }
-
 }
+
 /*thesis*/
 .container video {
  max-width: 100%;
@@ -225,8 +248,11 @@ nav span {
     display: flex;
     max-width: 100%;
     margin: none;
+    padding-top: 1rem;
+    padding-bottom: 1.5rem;
   }
 }
+
 /*footer*/
 footer {
  display: flex;
